fix arrows and highlighting of selected buttons
1) fix bug due to mapbox rotations of icon-image being clockwise and not following unit circle
2) make icons smaller
3) allow overlap to show all arrows
4) fix blue highlight when clicking a button in some browsers such as chrome

--- a/public/css/mainPage.css
+++ b/public/css/mainPage.css
@@ -13,6 +13,10 @@ button {
     cursor: pointer;
 }
 
+button:focus {
+    outline: none !important;
+}
+
 h1.title {
     font-size: 32px;
     margin-bottom: 2em;
